--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,22 +10,22 @@
 <div class="row center-block padding-top ">
   <hr/>
   <div class="col-xs-6 col-sm-3 placeholder text-center">
-    <img src="//lorempixel.com/200/200/food" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">
+    <img src="http://lorempixel.com/200/200/food" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">
     <h4>Food</h4>
     <span class="text-muted">Something else</span>
   </div>
   <div class="col-xs-6 col-sm-3 placeholder text-center">
-    <img src="//lorempixel.com/200/200/sports" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">
+    <img src="http://lorempixel.com/200/200/sports" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">
     <h4>Sport</h4>
     <span class="text-muted">Something else</span>
   </div>
   <div class="col-xs-6 col-sm-3 placeholder text-center">
-    <img src="//lorempixel.com/200/200/people/9" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">
+    <img src="http://lorempixel.com/200/200/people/9" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">
     <h4>Social</h4>
     <span class="text-muted">Something else</span>
   </div>
   <div class="col-xs-6 col-sm-3 placeholder text-center">
-    <img src="//lorempixel.com/200/200/cats" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">
+    <img src="http://lorempixel.com/200/200/cats" class="center-block img-responsive img-circle" alt="Generic placeholder thumbnail">
     <h4>Awesome</h4>
     <span class="text-muted">Something else</span>
   </div>
